# pack_world

./: .gitignore  build.bat  build_game.bat  cargo.toml  pack_world.sublime-workspace  spec.sublime-workspace
elara_platform_web/: Cargo.toml
elara_platform_web/firebase_hosting/public/: index.html
elara_platform_web/src/: lib.rs  supabase.rs  webgl_api.rs
elara_platform_windows/: Cargo.toml
elara_platform_windows/src/: lib.rs  main.rs
elara_renderapi_opengl_windows/: Cargo.toml
elara_renderapi_opengl_windows/src/: wgl_api.rs
example_game/: Cargo.toml
example_game/src/: example_game.rs  main.rs
gengar_platform_web/: Cargo.toml  index.html  readme.md
gengar_platform_web/firebase_hosting/: .firebaserc
gengar_platform_web/src/: idb.rs  lib.rs  supabase.rs  webgl.rs  webgl_api.rs
gengar_platform_web/src/supabase/: edge_functions.rs
gengar_platform_web/src/webgl/: webgl_api.rs  webgl_render.rs  webgl_render_api.rs  webgl_render_new.rs
gengar_platform_windows/: Cargo.toml
gengar_platform_windows/src/: main.rs  vol_mem.rs
pack_world_game/: Cargo.toml  build.rs
pack_world_game/design/: Designs.afdesign  PackFlow.drawio  Packs Items Tables.xlsx  Packs.xlsx
pack_world_game/resources/: manifest.txt  pack.xcf
pack_world_game/resources/models/first_tile/: first_tile.blend
pack_world_game/resources/models/model_missing/: model_missing.blend  model_missing.mtl
pack_world_game/resources/models/tile_grass/: tile_grass.blend  tile_grass.mtl  tile_grass.spp.painter_lock
pack_world_game/resources/models/tile_outline/: tile_outline.blend  tile_outline.mtl
pack_world_game/resources/models/tile_water/: tile_water.blend  tile_water.mtl  tile_water.spp.painter_lock
pack_world_game/resources/packs/: pack_model.blend  pack_starter_with_extras.blend
pack_world_game/resources/packs/pack_mudheart/: pack_mudheart.spp.painter_lock
pack_world_game/resources/packs/pack_starter/: pack_starter.blend  pack_starter.spp.painter_lock
pack_world_game/resources/packs/pack_stick/: pack_stick.blend  pack_stick.spp.painter_lock
pack_world_game/resources/packs/pack_water/: pack_water.blend
pack_world_game/resources/tiles/tile_birdnest/: tile_birdnest.blend  tile_birdnest.mtl  tile_birdnest.spp.painter_lock
pack_world_game/resources/tiles/tile_boulder/: tile_boulder.blend  tile_boulder.mtl  tile_boulder.spp.painter_lock
pack_world_game/resources/tiles/tile_cave/: tile_cave.blend  tile_cave.mtl
pack_world_game/resources/tiles/tile_clam/: tile_clam.blend  tile_clam.spp.painter_lock
pack_world_game/resources/tiles/tile_crab/: tile_crab.blend  tile_crab.spp.painter_lock
pack_world_game/resources/tiles/tile_dirt/: first_tile.mtl
pack_world_game/resources/tiles/tile_frog/: tile_frog.blend
pack_world_game/resources/tiles/tile_goblin/: tile_goblin.blend
pack_world_game/resources/tiles/tile_grass/: tile_grass.blend  tile_grass.spp.painter_lock
pack_world_game/resources/tiles/tile_kelp/: tile_kelp.blend  tile_kelp.mtl  tile_kelp.spp.painter_lock
pack_world_game/resources/tiles/tile_mudchicken/: tile_mudchicken.blend
pack_world_game/resources/tiles/tile_mudfish/: tile_mudfish.blend  tile_mudfish.mtl  tile_mudfish.spp.painter_lock
pack_world_game/resources/tiles/tile_mudhenge/: tile_mudhenge.blend  tile_mudhenge.mtl
pack_world_game/resources/tiles/tile_mudpig/: tile_mudpig.blend
pack_world_game/resources/tiles/tile_mudpit/: tile_mud.mtl  tile_mudpit.blend
pack_world_game/resources/tiles/tile_newt/: tile_newt.blend
pack_world_game/resources/tiles/tile_oaktree/: tile_oaktree.blend  tile_oaktree.mtl
pack_world_game/resources/tiles/tile_reed/: tile_reed.blend
pack_world_game/resources/tiles/tile_shrub/: tile_shrub.blend  tile_shrub.mtl  tile_shrub.spp.painter_lock
pack_world_game/resources/tiles/tile_spring/: tile_spring.blend  tile_spring.spp.painter_lock
pack_world_game/resources/tiles/tile_tallgrass/: tile_tall_grass.blend  tile_tall_grass.mtl  tile_tall_grass.spp
pack_world_game/resources/tiles/tile_water/: tile_water.blend  tile_water.spp.painter_lock
pack_world_game/src/: account_system.rs  constants.rs  drop_table.rs  error.rs  format_graveyard.rs  game.rs  game_mode.rs  grid.rs  harvest_drop.rs  item.rs  main.rs  pack.rs  pack_shop_display.rs  pack_shop_signals.rs  purchase_flow.rs  save_file.rs  state.rs  testing_infra.rs  tests.rs  tile.rs  tiles.rs  ui_panels.rs  update_signal.rs  user_account.rs  world.rs
pack_world_game/src/account_system/: purchase_flow.rs
pack_world_game/src/drop_table/: fixed_tables.rs  instances.rs  table_instance.rs
pack_world_game/src/drop_table/fixed_tables/: drop_table_boulder.rs  drop_table_cave.rs  drop_table_clam.rs  drop_table_dirt.rs  drop_table_frog.rs  drop_table_grass.rs  drop_table_mud_henge.rs  drop_table_mud_pig.rs  drop_table_mud_pit.rs  drop_table_newt.rs  drop_table_oak_tree.rs  drop_table_pack_mud.rs  drop_table_shrub.rs  (+7 more)
pack_world_game/src/game_mode/: game_mode_inventory.rs  game_mode_shop.rs  game_mode_world.rs
pack_world_game/src/grid/: grid_pos.rs
pack_world_game/src/item/: item_data.rs
pack_world_game/src/pack/: pack_id.rs  packs.rs
pack_world_game/src/pack_shop_display/: pack_render_instance.rs
pack_world_game/src/save_file/: kvp_file.rs  load.rs
pack_world_game/src/state/: assets.rs  inventory.rs  player_state.rs
pack_world_game/src/tile/: harvest_timer.rs  tile_definition.rs  tile_instance.rs  tile_methods.rs  tile_thumbnail.rs  tile_type.rs  tiles.rs
pack_world_game/src/tiles/: tile_dirt.rs  tile_grass.rs  tile_rock.rs
pack_world_game/src/ui_panels/: create_account_panel.rs  debug_panel.rs  home_panel.rs  inventory_panel.rs  nav_tabs_panel.rs  open_pack_panel.rs  pack_details_panel.rs  pairing_code_panel.rs  shop_panel.rs  tile_library_panel.rs
pack_world_game/src/user_account/: user_info.rs
pack_world_game/src/world/: entity_id.rs  global_mod.rs  grid_pos_iterator.rs  tests.rs  world_cell.rs  world_condition.rs  world_condition_state.rs  world_layer.rs  world_snapshot.rs
pack_world_web_runner/: Cargo.toml  index.html
pack_world_web_runner/src/: lib.rs
(+190 files in other folders)
