[package]
name = "elara_renderapi_opengl_windows"
version = "1.0.0"
edition = "2021"

[lib]
path = "src/wgl_api.rs"

[dependencies]

#elara_engine = { git = "https://github.com/RyanRothweiler/elara_engine.git", branch = "version/1.x.x", version = "=1.0.0" }
elara_engine = { path = "C:/Digital Archive/Game Development/elara/elara_engine/", version = "=1.0.0" }

elara_render_opengl = { path = "../elara_render_opengl" }
libc = "0.2"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
	"Win32_Graphics_OpenGL",
]   