[package]
name = "example_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/example_game.rs"

[[bin]]
name = "example_game_main"
path = "src/main.rs"

[dependencies]
elara_engine = { path = "C:/Digital Archive/Game Development/elara/elara_engine/", version = "=1.0.0" }
elara_render_opengl = { path = "../elara_render_opengl", version = "=1.0.0" }
elara_platform_windows = { path = "../elara_platform_windows" }