[package]
name = "gengar_platform_web"
version = "0.1.0"
authors = ["RyanRothweiler <ryanrothweiler@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.70"
console_error_panic_hook = { version = "0.1.7", optional = true }
rexie = "0.6.2"
gengar_engine = { path = "../gengar_engine" }
gengar_render_opengl = { path = "../gengar_render_opengl" }

game = { path = "../pack_world_game", package = "pack_world_game" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[dependencies.web-sys]
version = "0.3.70"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlShader",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "KeyboardEvent",
  "MouseEvent",
  "BeforeUnloadEvent",
  "WebGlUniformLocation",
  "Window",
  "console",
  "WebGlTexture",
  "Performance", 
  "PerformanceTiming",
  "WebGlContextAttributes",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode", 
  "Response",
  "Crypto",
  "Storage",
  "IdbRequest",
  "IdbDatabase",
  "Location",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wasm_bindgen_unstable_test_coverage)'] }