[package]
name = "gengar_platform_windows"
version = "0.1.0"
edition = "2021"

[features]
default = ["hotreloading_dll"]
hotreloading_dll = []
tracking_allocator = []

[dependencies]
rand = "0.9.0"

elara_engine = { path = "../elara_engine" }
gengar_renderapi_opengl_windows = { path = "../gengar_renderapi_opengl_windows" }
gengar_render_opengl = { path = "../gengar_render_opengl" }

game = { path = "../pack_world_game", package="pack_world_game" }


[dependencies.windows]
version = "0.52"
features = [
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse"
]