[package]
name = "pack_world_game"
version = "0.5.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/game.rs"

[dependencies]
elara_engine = { git = "https://github.com/RyanRothweiler/elara_engine.git", branch = "version/1.x.x", version = "=1.0.0" }
elara_render_opengl = { path = "../elara_render_opengl", version = "=1.0.0" }

[dev-dependencies]
rand = "0.9.0"