[package]
name = "pack_world_game"
version = "0.5.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/game.rs"

[dependencies]

elara_engine = { git = "https://github.com/RyanRothweiler/elara_engine.git", branch = "version/1.0.0", version = "=1.0.0" }
elara_render_opengl = { path = "C:/Digital Archive/Game Development/elara/elara_render_opengl/" }

[dev-dependencies]
rand = "0.9.0"