[package]
name = "pack_world_web_runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
elara_engine = { git = "https://github.com/RyanRothweiler/elara_engine.git", branch = "version/1.0.0", version = "=1.0.0" }
elara_render_opengl = { path = "C:/Digital Archive/Game Development/elara/elara_render_opengl/" }
elara_platform_web = { path = "C:/Digital Archive/Game Development/elara/elara_platform_web/", version = "=1.0.0" }
pack_world_game = { path = "../pack_world_game" }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.50"

[dependencies.web-sys]
version = "0.3.70"
features = [
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGl2RenderingContext",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlShader",
  "WebGlFramebuffer",
  "WebGlRenderbuffer",
  "KeyboardEvent",
  "ClipboardEvent",
  "DataTransfer",
  "MouseEvent",
  "BeforeUnloadEvent",
  "WebGlUniformLocation",
  "Window",
  "console",
  "WebGlTexture",
  "Performance", 
  "PerformanceTiming",
  "WebGlContextAttributes",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode", 
  "Response",
  "Crypto",
  "Storage",
  "IdbRequest",
  "IdbDatabase",
  "Location",
  "WheelEvent",
]
